# HTTPS-server-cxx

./: .gitignore  .gitignore.txt  CMakeLists.txt  LICENSE  run.sh
AssetHelper/: CMakeLists.txt
AssetHelper/include/AssetHelper/: AssetHelper.hpp
AssetHelper/src/: AssetHelper.cpp  main.cpp
Backend/: AuthentificationServer.sln
Backend/AuthentificationServer/: Application.cpp  AuthHandling.cpp  AuthentificationServer.cpp  AuthentificationServer.vcxproj  AuthentificationServer.vcxproj.filters  Auxiliary.cpp  DashHandling.cpp  DatabaseHandler.cpp  DatabaseHandler.hpp  DatbaseHandler.cpp  HandlingContext.cpp  HandlingContext.hpp  HttpServer.cpp  HttpServer.h  RegisterHandler.hpp  ResourceHandlingUtility.hpp  ResourceManager.cpp  ResourceManager.hpp  Server.cpp  Server.h  Server.hpp
Backend/AuthentificationServer/x64/Debug/: vc143.idb
Backend/CDN-meditationVideos/: CDN-meditationVideos.cpp  CDN-meditationVideos.vcxproj  CDN-meditationVideos.vcxproj.filters
Backend/ClientTest/: Application.cpp  Client.h  Client.hpp  ClientTest.cpp  ClientTest.vcxproj  ClientTest.vcxproj.filters  Test2.txt
Backend/Communication/: AbstractClient.h  AbstractConnection.h  AbstractConnection.hpp  AbstractResponseHandler.hpp  AbstractServer.h  AbstractServer.hpp  Algo.h  BaseHandlingContext.hpp  BasicClient.h  BasicClient.hpp  BasicConnection.h  BasicConnection.hpp  BasicServer.h  BasicServer.hpp  ClientInterface.h  Common.h  Common.hpp  Communication.vcxproj  Communication.vcxproj.filters  Connection.cpp  Connection.h  ConnectionList.cpp  ConnectionList.h  ConsoleLog.cpp  ConsoleLog.h  ConsoleLog.hpp  DataCompressor.hpp  DataFilters.h  DataFilters.hpp  FileHelper.cpp  FileHelper.hpp  FileReader.hpp  HttpClient.h  HttpClient.hpp  HttpClientConnection.cpp  HttpClientConnection.h  HttpClientConnection.hpp  HttpCommon.cpp  HttpCommon.h  HttpCommon.hpp  (+64 more)
Backend/Delivery Server/: Delivery Server.cpp  Delivery Server.vcxproj  Delivery Server.vcxproj.filters
Backend/Utility/: Common.hpp  ConsoleLog.hpp  ConstexprMap.hpp  FileHelper.cpp  FileHelper.hpp  FileReader.hpp  FileWriter.hpp  StringViewArray.hpp  Utility.vcxproj  Utility.vcxproj.filters
Backend/WebResourceGenerator/: WebResourceGenerator.h  WebResourceGenerator.vcxproj  WebResourceGenerator.vcxproj.filters  main.cpp  makefile
Frontend/Sheepfold/: settings.gradle.kts
Frontend/Sheepfold/app/: build.gradle.kts
Frontend/Sheepfold/gradle/wrapper/: gradle-wrapper.properties
Utility/: CMakeLists.txt
Utility/include/Utility/: Algo.hpp  Common.hpp  ConstexprMap.hpp  DataFilters.hpp  FileHelper.hpp  FileReader.hpp  FileWriter.hpp  Log.hpp  StringHelper.hpp  StringViewArray.hpp  TsQueue.hpp  Utility.hpp
Utility/src/: DataFilters.cpp  FileHelper.cpp  FileReader.cpp  FileWriter.cpp  Log.cpp  StringHelper.cpp
examples/: CMakeLists.txt
examples/AuthServer/: CMakeLists.txt
examples/AuthServer/Frontend/public/: index.html
examples/AuthServer/include/AuthServer/: .Server.hpp.swp  HandlingContext.hpp  RegisterHandler.hpp  ResourceHandlingUtility.hpp  Server.hpp
examples/AuthServer/src/: Application.cpp  DashHandling.cpp  DatabaseHandler.cpp  HandlingContext.cpp  Server.cpp
examples/ClientTest/: Application.cpp  ClientTest.vcxproj
include/Thumos/: .HttpsServer.hpp.swp  Http.hpp  HttpBase.hpp  HttpRequest.hpp  HttpServer.hpp  HttpsServer.hpp
include/Thumos/Auth/: JWT.hpp
include/Thumos/Auth/JWT/: Generator.hpp  Validator.hpp
include/Thumos/Core/: AbstractConnection.hpp  AbstractResponseHandler.hpp  AbstractServer.hpp  BasicClient.hpp  BasicConnection.hpp  BasicServer.hpp  ClientInterface.hpp  Common.hpp  Message.hpp  MessageReader.hpp  SecureClient.hpp  SecureConnection.hpp  SecureServer.hpp  ServerConnectionList.hpp
include/Thumos/Deprecated/: HttpsClientConnection.hpp
include/Thumos/Detail/Http/: .HttpRequestReader.hpp.swp  HeaderList.hpp  HttpFilter.hpp  HttpMessage.hpp  HttpReader.hpp  HttpRequestReader.hpp  HttpResponse.hpp  HttpResponseHandler.hpp  HttpResponseReader.hpp  HttpServerConnection.hpp  HttpsServerSession.hpp
include/Thumos/Routing/: BaseHandlingContext.hpp  ListRouter.hpp  Resource.hpp  ResourceHandler.hpp  RouterInterface.hpp
include/Thumos/Web/: .WebLogisticsHandler.hpp.swp  DataCompressor.hpp  WebComponent.hpp  WebLogisticsHandler.hpp  WebPageCodex.hpp  WebPageDeliverer.hpp
src/Auth/JWT/: Generator.cpp  Validator.cpp
src/Detail/Http/: HeaderList.cpp  HttpFilter.cpp  HttpMessage.cpp  HttpResponse.cpp
src/Web/: .WebLogisticsHandler.cpp.swp  WebLogisticsHandler.cpp  WebPageCodex.cpp  WebPageDeliverer.cpp
(+10 files in other folders)
